[project]
name = "hpp-gepetto-viewer"
version = "6.0.0"
description = "Display of hpp robots and obstacles in gepetto-viewer"
license = "BSD-2-Clause"
dependencies = [
  "numpy",
  "pinocchio",
  "pycollada",
  "trimesh",
  "viser",
]

[tool.ruff]
extend-exclude = ["cmake"]

[tool.ruff.lint]
extend-select = ["I", "NPY", "RUF", "UP", "W"]

[tool.tomlsort]
all = true
