[project]
dependencies = [
  "numpy",
  "pin",
  "pycollada",
  "trimesh",
  "viser"
]
description = "Display of hpp robots and obstacles in gepetto-viewer"
license = "BSD-2-Clause"
name = "hpp-gepetto-viewer"
version = "6.0.0"

[tool.ruff]
extend-exclude = ["cmake"]

[tool.ruff.lint]
extend-select = ["I", "NPY", "RUF", "UP", "W"]

[tool.tomlsort]
all = true
